<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".view.fragment.CartFragment">


    <ImageView
        android:layout_marginTop="5dp"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/goback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/checkoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/checkout"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:src="@drawable/line"
        app:layout_constraintTop_toBottomOf="@+id/checkoutText">

    </ImageView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:src="@drawable/line"
                app:layout_constraintTop_toBottomOf="@+id/checkoutText">

            </ImageView>

            <LinearLayout
                android:id="@+id/paymentOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:paddingStart="20dp"
                    android:text="@string/paymentCat"
                    android:textColor="@color/white"
                    android:textSize="17dp">

                </TextView>

                <ImageView
                    android:id="@+id/buttonIco"
                    android:layout_width="25dp"
                    android:scaleType="fitXY"
                    android:layout_height="25dp"
                    android:src="@drawable/nextico">

                </ImageView>
            </LinearLayout>


            <RadioGroup
                android:id="@+id/paymentType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/cashOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/cash"
                    android:textSize="16dp"
                    android:textColor="@color/white">
                </RadioButton>

                <RadioButton
                    android:id="@+id/withCart"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/card"
                    android:textColor="@color/white">

                </RadioButton>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total cost : 0 $"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <id.ss564.lib.slidingbutton.SlidingButton
                android:id="@+id/slidingButton"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="#404040"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:sliding_button_background="@color/teal_700"
                app:sliding_button_icon="@drawable/nextico"
                app:sliding_button_icon_tint="@color/white"
                app:sliding_corner_radius="15dp"
                app:sliding_showTrack="true"
                app:sliding_text="@string/confirmPayment"
                app:sliding_text_color="@color/teal_200"
                app:sliding_text_size="14dp"
                app:sliding_text_textStyle="bold"
                app:sliding_trackBackground="@color/teal_700">

            </id.ss564.lib.slidingbutton.SlidingButton>
        <androidx.cardview.widget.CardView
            android:id="@+id/addSucImage"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:visibility="gone"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/teal_700"
            android:layout_height="45dp">
            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/addedsucico"
                android:layout_margin="3dp"
                android:layout_height="match_parent">

            </ImageView>

        </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBarCart"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>